spacing fix

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -178,8 +178,8 @@ p strong{
     font-weight: 600 !important;
 }
 
-p + p{
-    margin-top: -8px;
+li > p {
+    margin-bottom: 0;
 }
 
 small {
